remove border in mobile and fix container overflow

--- a/src/css/animation.css
+++ b/src/css/animation.css
@@ -15,7 +15,6 @@
 
 @media screen and (max-width: 639px) {
   .page {
-    margin-top: 128px;
+    /* margin-top: 128px; */
   }
-  
 }
